--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test</title>
     <link rel="stylesheet" href="aiousdyas.css">    
+    <meta content=":3" property="og:title" />
+<meta content="test" property="og:description" />
+<meta content="https://adu.shiggy.fun/v1/320170625979121665/avatar" property="og:image" />
+<meta content="#43B581" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
 <h1>test!</h1>
