--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
+    <title>about yumi</title>
     <link rel="stylesheet" href="aiousdyas.css">    
-    <meta content="yumi's biography" property="og:title" />
+    <meta content="about yumi" property="og:title" />
 <meta content="welcome!! feel free to learn about me on this site" property="og:description" />
 <meta content="https://adu.shiggy.fun/v1/320170625979121665/avatar" property="og:image" />
 <meta content="#1ea8e8" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
-<h1>test!</h1>
+<center>hellooooo!! welcome!!!</center>
+<center>yumi, 15, she/her</center>
 </body>
 </html> 
