--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta content="#1ea8e8" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
-<center> <span style:"font-size: 26px">hellooooo!! welcome!!!</span></center>
+<span style:"font-size: 26px"><center> hellooooo!! welcome!!!</center></span>
 <center>yumi, 15, she/her</center>
 </body>
 </html> 
