--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <meta content="https://adu.shiggy.fun/v1/320170625979121665/avatar" property="og:image" />
 <meta content="#1ea8e8" data-react-helmet="true" name="theme-color" />
 </head>
+<style>
+    h1 {text-align: center;}
+</style>
 <body>
-<span style:"font-size: 26px"><center> hellooooo!! welcome!!!</center></span>
+<h1> hellooooo!! welcome!!!</h1>
 <center>yumi, 15, she/her</center>
 </body>
 </html> 
