hopefully getting text in the middle of the screen

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     h1 {text-align: center;}
 </style>
 <body>
-<h1> hellooooo!! welcome!!!</h1>
-<center>yumi, 15, she/her</center>
+<centered> hellooooo!! welcome!!!</centered>
+<div style="text-align:center;">
+    yumi, 15, she/her<br />
+</div>
 </body>
 </html> 
