samo my beloved's idea

--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     h1 {text-align: center;}
 </style>
 <body>
-<centered> hellooooo!! welcome!!!</centered>
+<h1> hellooooo!! welcome!!!</h1>
 <div style="text-align:center;">
     yumi, 15, she/her<br />
+    display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
 </div>
 </body>
 </html> 
