--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
 </style>
 <body>
 <h1> hellooooo!! welcome!!!</h1>
-<div style="text-align:center;">
-    yumi, 15, she/her<br />
-</div>
-display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+<centered>yumi, 15, she/her</centered>
 </body>
 </html> 
