--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     h1 {text-align: center;}
 </style>
 <body>
-<h1> hellooooo!! welcome!!!</h1>
+<div center>welcome!!</div center>
 <centered>yumi, 15, she/her</centered>
 </body>
 </html> 
