too much head pain for day one.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     h1 {text-align: center;}
 </style>
 <body>
-<div center>welcome!!</div center>
-<centered>yumi, 15, she/her</centered>
+<h1>welcome!!!</h1>>
+<h1>yumi, 15, she/her</h1>>
 </body>
 </html> 
