--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <h1>welcome!!!</h1>>
 <h1>yumi, 15, she/her</h1>>
 <a href="https://twitter.com/casual_gaming1">
-    <img src:"https://yumii.s-ul.eu/20Kker9Q.png" alt="My Twitter/X.com" width="100" height="100">
+    <img src:"https://yumii.s-ul.eu/20Kker9Q.png">
 </a>
 
 </body>
