hopefully centering it and adding more than one hyperlink

--- a/index.html
+++ b/index.html
@@ -16,9 +16,28 @@
 <body>
 <h1>welcome!!!</h1>>
 <h1>yumi, 15, she/her</h1>>
-<h1><a href="https://twitter.com/casual_gaming1" target="_blank">
-    <img src="https://yumii.s-ul.eu/20Kker9Q.png" alt="My Twitter/X.com" width="25" height="25">
-</a></h1>
 
+<section class="twt">
+    <figure class="twt">
+        <img
+            href="https://twitter.com/casual_gaming1" target="_blank"
+            src="https://yumii.s-ul.eu/20Kker9Q.png"
+            alt="My Twitter/X.com"
+            height="25px"
+            width="25px"
+        />
+    </figure>
+
+    <figure class="yt"><a>
+        <img
+            href="https://www.youtube.com/channel/UCGrVNZYTTy4bpqAzMm9x38Q"
+            src="https://yumii.s-ul.eu/cueZvAOR.png"
+            alt="My YouTube"
+            height="25px"
+            width="25px"
+        />
+       </a>
+    </figure>
+</section>
 </body>
 </html> 
