...does this add furina to my site?

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     h1 {text-align: center;}
 </style>
 <body>
-<h1>welcome!!!</h1>>
-<h1>yumi, 15, she/her</h1>>
+<h1>welcome!!!</h1>
+<h1>yumi, 15, she/her</h1>
+
+<img src="https://adu.shiggy.fun/v1/320170625979121665/avatar" alt="Avatar" class="avatar">
 
 <section class="twt">
-    <figure class="twt">
+    <figure class="twt"><a>
         <img
             href="https://twitter.com/casual_gaming1" target="_blank"
             src="https://yumii.s-ul.eu/20Kker9Q.png"
@@ -26,7 +28,7 @@
             height="25px"
             width="25px"
         />
-    </figure>
+    </figure></a>
 
     <figure class="yt"><a>
         <img
