--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
         
             <figure class="yt"><a>
                 <img
-                    href="https://www.youtube.com/channel/UCGrVNZYTTy4bpqAzMm9x38Q"
-                    src="https://yumii.s-ul.eu/cueZvAOR.png"
-                    alt="My YouTube"
+                    src="https://yumii.s-ul.eu/cueZvAOR.png" alt="My YouTube" href="https://www.youtube.com/channel/UCGrVNZYTTy4bpqAzMm9x38Q" target="_blank"  
                     height="25px"
                     width="25px"
                 />
