--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 <style>
     .content {
       max-width: 600px;
-      margin: auto;
+      margin: auto;display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     </style>
     <body>
@@ -50,7 +52,6 @@
             </figure>
         </section>
     </div>
-    
     </body>
 </body>
 </html> 
