--- a/index.html
+++ b/index.html
@@ -32,23 +32,16 @@
         <img src="https://adu.shiggy.fun/v1/320170625979121665/avatar" alt="Avatar" class="avatar">
         
         <section class="twt">
-            <figure class="twt"><a>
-                <img
-                    href="https://twitter.com/casual_gaming1" target="_blank"
-                    src="https://yumii.s-ul.eu/20Kker9Q.png"
-                    alt="My Twitter/X.com"
-                    height="25px"
-                    width="25px"
-                />
-            </figure></a>
+            <figure class="twt">
+                <a href="https://twitter.com/casual_gaming1">
+                    <img src="https://yumii.s-ul.eu/20Kker9Q.png" alt="My Twitter/X.com">
+                  </a>
+            </figure>
         
-            <figure class="yt"><a>
-                <img
-                    src="https://yumii.s-ul.eu/cueZvAOR.png" alt="My YouTube" href="https://www.youtube.com/channel/UCGrVNZYTTy4bpqAzMm9x38Q" target="_blank"  
-                    height="25px"
-                    width="25px"
-                />
-               </a>
+            <figure class="yt">
+                <a href="https://www.youtube.com/channel/UCGrVNZYTTy4bpqAzMm9x38Q">
+                    <img src="https://yumii.s-ul.eu/cueZvAOR" alt="My YouTube">
+                  </a>
             </figure>
         </section>
     </div>
