oops, forgot to add height and width to the hyperlinks...

--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
         <section class="twt">
             <figure class="twt">
                 <a href="https://twitter.com/casual_gaming1">
-                    <img src="https://yumii.s-ul.eu/20Kker9Q.png" alt="My Twitter/X.com">
+                    <img src="https://yumii.s-ul.eu/20Kker9Q.png" alt="My Twitter/X.com" height="25px" width="25px">
                   </a>
             </figure>
         
             <figure class="yt">
                 <a href="https://www.youtube.com/channel/UCGrVNZYTTy4bpqAzMm9x38Q">
-                    <img src="https://yumii.s-ul.eu/cueZvAOR" alt="My YouTube">
+                    <img src="https://yumii.s-ul.eu/cueZvAOR" alt="My YouTube" height="25px" width="25px">
+                    
                   </a>
             </figure>
         </section>
