making my avatar bigger

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>welcome!!!</h1>
         <h1>yumi, 15, she/her</h1>
         
-        <img src="https://adu.shiggy.fun/v1/320170625979121665/avatar" alt="Avatar" class="avatar">
+        <img src="https://adu.shiggy.fun/v1/320170625979121665/avatar" alt="Avatar" class="avatar" height="100px" width="100px">
         
         <section class="twt">
             <figure class="twt">
